# backend/src/user/user.controller.ts
@@ -21,22 +21,10 @@ import { RequestUser } from 'src/constants/auth';
 import { UserDto } from 'src/constants/user';
 import { UserService } from './user.service';
 
-@Controller('classroom')
-@ApiTags('classroom')
+@Controller('user')
+@ApiTags('user')
 @UseGuards(AuthGuard())
 @ApiBearerAuth()
 export class UserController {
   constructor(private readonly userService: UserService) {}
-
-  @Put('/classroom/join')
-  @ApiOperation({ summary: 'Adds a student to a specific classroom' })
-  @ApiOkResponse({
-    description: 'Added a student to classroom',
-  })
-  public async joinClassroom(
-    @RequestUser() user: User,
-    @Param('id') classId: number,
-  ): Promise<UserDto> {
-    return await this.userService.joinClassroom(user, +classId);
-  }
 }
